--- a/src/pages/components/breadcrumb/accessibility.mdx
+++ b/src/pages/components/breadcrumb/accessibility.mdx
@@ -14,7 +14,7 @@ No accessibility annotations are needed for breadcrumbs, but keep these consider
 
 <AnchorLinks>
   <AnchorLink>What Carbon provides</AnchorLink>
-  <AnchorLink>Developer considerations</AnchorLink>
+  <AnchorLink>Development considerations</AnchorLink>
 </AnchorLinks>
 
 ## What Carbon provides
@@ -30,12 +30,12 @@ Each page link in the breadcrumb is reached by `Tab` and activated by `Enter`. T
 
 ![example of breadcrumb keyboard interaction](images/breadcrumb-accessibility-1.png)
 
+<Caption>The breadcrumb's links are reached by `Tab` and activated by `Enter`.</Caption>
+
 </Column>
 </Row>
 
-The breadcrumb's links are reached by `Tab` and activated by `Enter`.
-
-### Labelling and regions
+### Labeling and regions
 
 Carbon implements each page link as a list item inside a navigation region named “breadcrumb.” The ellipsis symbol is a button called “more breadcrumbs” which opens the [overflow menu](https://carbondesignsystem.com/components/overflow-menu/usage/).
 
@@ -44,12 +44,12 @@ Carbon implements each page link as a list item inside a navigation region named
 
 ![aria-label designates the navigation region 'breadcrumb' and the ellipsis button 'more breadcrumbs’](images/breadcrumb-accessibility-2.png)
 
+<Caption>Carbon provides the accessibility information about the breadcrumb's structure.</Caption>
+
 </Column>
 </Row>
 
-Carbon provides the accessibility information about the breadcrumb's structure.
-
-## Developer considerations
+## Development considerations
 
 Keep these considerations in mind if you are modifying Carbon or creating a custom component:
 
