--- a/src/pages/components/button/accessibility.mdx
+++ b/src/pages/components/button/accessibility.mdx
@@ -24,17 +24,21 @@ Carbon bakes keyboard operation into its components, improving the experience of
 
 ### Keyboard interactions
 
+Buttons can be reached by `Tab` and selected with `Space` or `Enter`.
+
 <Row>
 <Column colLg={8}>
 
 ![example of button keyboard interaction](images/button-accessibility-1.png)
 
-<Caption>Buttons can be reached by `Tab` and selected with `Space` or `Enter`.</Caption>
+<Caption>Carbon buttons retain expected interactions.</Caption>
 
 </Column>
 </Row>
 
-### interaction
+### Behavior
+
+Icon-only butttons, which do not persistently display a text label, expose their label on hover and focus. When icon-only buttons are used to open menus, they are treated as separate components in Carbon. See [Dropdown](https://carbondesignsystem.com/components/dropdown/usage/) and [Overflow menu](https://carbondesignsystem.com/components/overflow-menu/usage/).
 
 <Row>
 <Column colLg={8}>
@@ -51,7 +55,7 @@ Carbon bakes keyboard operation into its components, improving the experience of
 
 ![an activated button reveals 3 options in a menu](images/button-accessibility-3.png)
 
-<Caption>Buttons that open menus are separate components in Carbon. See [Dropdown](https://carbondesignsystem.com/components/dropdown/usage/) and [Overflow menu](https://carbondesignsystem.com/components/overflow-menu/usage/).</Caption>
+<Caption>Buttons that open menus are separate components in Carbon.</Caption>
 </Column>
 </Row>
 
