--- a/src/pages/components/checkbox/accessibility.mdx
+++ b/src/pages/components/checkbox/accessibility.mdx
@@ -14,8 +14,8 @@ Design annotations are needed for specific instances shown below, but for the st
 
 <AnchorLinks>
   <AnchorLink>What Carbon provides</AnchorLink>
-  <AnchorLink>Design annotations</AnchorLink>
-  <AnchorLink>Developer considerations</AnchorLink>
+  <AnchorLink>Design recommendations</AnchorLink>
+  <AnchorLink>Development considerations</AnchorLink>
 </AnchorLinks>
 
 ## What Carbon provides
@@ -24,15 +24,17 @@ Carbon bakes keyboard operation into its components, improving the experience of
 
 ### Keyboard interactions
 
+Each checkbox can be reached by `Tab` and selected with `Space` independently.
+
 <Row>
 <Column colLg={8}>
 
 ![example of checkbox keyboard interaction](images/checkbox-accessibility-1.png)
 
+<Captions>Carbon checkboxes retain expected interactions.</Caption>
+
 </Column>
 </Row>
-
-Each checkbox can be reached by `Tab` and selected with `Space` independently.
 
 ### Grouping
 
@@ -43,12 +45,12 @@ For groups of checkboxes, Carbon already provides the code for screen readers to
 
 ![checkbox items with group label](images/checkbox-accessibility-2.png)
 
+<Captions>Carbon handles the accessibility of grouped checkboxes.</Captions>
+
 </Column>
 </Row>
 
-Carbon handles the accessibility of grouped checkboxes.
-
-## Design annotations
+## Design recommendations
 
 Design annotations are needed for the following instances.
 
@@ -61,12 +63,12 @@ Checkboxes can appear in multiple columns. If there is a meaningful order to the
 
 ![checkboxes with instruction to ‘navigate in columns'](images/checkbox-accessibility-3.png)
 
+<Captions>Annotate if there is meaningful navigation order in rows of checkboxes.</Captions>
+
 </Column>
 </Row>
 
-Annotate if there is meaningful navigation order in rows of checkboxes.
-
-## Developer considerations
+## Development considerations
 
 Keep these considerations in mind if you are modifying Carbon or creating a custom component:
 
