Update progress bars

--- a/src/pages/components/progress-bar/usage.mdx
+++ b/src/pages/components/progress-bar/usage.mdx
@@ -221,11 +221,11 @@ restricted and can be placed within cards, data tables, or side panels.
 
 #### Width
 
-The width of a progress bar can be customized appropriately for its context. The
-minimum width of a progress bar is 48px and keep its width to a maximum of six
-columns when possible. If the progress bar width is too long it can reduce
-readability. Don't increase the progress bar length to fill the entire width of
-a window or application.
+The width of a progress bar can vary based on the content. The minimum width of
+a progress bar is 48px and keep its width to a maximum of six columns when
+possible. If the progress bar width is too long, it can reduce readability.
+Don't increase the progress bar length to fill the entire width of a window or
+application.
 
 <DoDontRow>
 
@@ -244,12 +244,12 @@ a window or application.
 ### Alignment
 
 Text alignment depends on the context and area given. Progress bar can have
-three ways for text alignment: default, inline, and indented. As long as the
-text is placed close to the progress bar, it’s up to designers to provide the
-best judgement that fits the context.
+three ways for text alignment: default, inline, and indent. Indent alignment
+should only be used inside containers, tiles, or side panels which the progress
+bar will extend to the edges.
 
 <Row>
-<Column colLg={12}>
+<Column colLg={8}>
 
 ![Progress bar alignments](images/progress-bar-usage-10.png)
 
@@ -257,6 +257,20 @@ best judgement that fits the context.
 
 </Column>
 </Row>
+
+<Row>
+<Column colLg={8}>
+
+![Progress bar alignments](images/progress-bar-usage-22.png)
+
+</Column>
+</Row>
+
+| Text alignment | Use case                                  |
+| -------------- | ----------------------------------------- |
+| Default        | Full page, cards, dialogs                 |
+| Inline         | Data table                                |
+| Indent         | Side panels, cards (usually on dashboard) |
 
 #### Text placement
 
@@ -447,7 +461,7 @@ to right) when enough information is gathered to end the load animation.
   reader users.
 
 - If the progress bar shows the loading of a specific part or region of the
-  applicaition, set `aria-busy="true"` and `aria-describedly="[progressbar-id]"`
+  application, set `aria-busy="true"` and `aria-describedly="[progressbar-id]"`
   on the related element to ensure assistive technologies can correctly convey
   this relation to the user.
 
