fix: code snippet image and heading content

--- a/src/pages/components/code-snippet/accessibility.mdx
+++ b/src/pages/components/code-snippet/accessibility.mdx
@@ -19,13 +19,15 @@ import {
 
 <PageDescription>
 
-No accessibility annotations are needed for code snippets, but keep these considerations in mind if you’re modifying Carbon or creating a custom component.
+No accessibility annotations are needed for code snippets, but keep these
+considerations in mind if you’re modifying Carbon or creating a custom
+component.
 
 </PageDescription>
 
 <AnchorLinks>
   <AnchorLink>What Carbon provides</AnchorLink>
-  <AnchorLink>Developer considerations</AnchorLink>
+  <AnchorLink>Development considerations</AnchorLink>
 </AnchorLinks>
 
 ## What Carbon provides
@@ -35,8 +37,8 @@ accessibility considerations.
 
 ### Keyboard interaction
 
-For all three variants, the code snippet can be copied with `Space` or `Enter`. Arrow
-keys can operate scroll bars.
+For all three variants, the code snippet can be copied with `Space` or `Enter`.
+Arrow keys can operate scroll bars.
 
 <Row>
 <Column colLg={8}>
@@ -46,7 +48,8 @@ keys can operate scroll bars.
 </Column>
 </Row>
 
-By default, each inline code snippet is reachable by `Tab` and copied with `Space` or `Enter`.
+By default, each inline code snippet is reachable by `Tab` and copied with
+`Space` or `Enter`.
 
 <Row>
 <Column colLg={8}>
@@ -56,7 +59,8 @@ By default, each inline code snippet is reachable by `Tab` and copied with `Spac
 </Column>
 </Row>
 
-The single line code snippet tabstop supports left and right arrow key scrolling.
+The single line code snippet tabstop supports left and right arrow key
+scrolling.
 
 <Row>
 <Column colLg={8}>
@@ -66,13 +70,14 @@ The single line code snippet tabstop supports left and right arrow key scrolling
 </Column>
 </Row>
 
-The multi-line’s buttons are reachable by `Tab` and activated with `Space` or `Enter`.
+The multi-line’s buttons are reachable by `Tab` and activated with `Space` or
+`Enter`.
 
 ### Labeling and updates
 
 Carbon provides the copy button's default label and tooltip behavior. Carbon
-handles notices about the success of the copy function, as well as updates to the
-Show more mechanism.
+handles notices about the success of the copy function, as well as updates to
+the Show more mechanism.
 
 <Row>
 <Column colLg={8}>
@@ -94,9 +99,9 @@ The code snippet’s buttons expose their labels on hover or focus.
 
 The results of activating buttons are provided in text.
 
-## Developer considerations
+## Development considerations
 
 Keep this in mind if you’re modifying Carbon or creating a custom component:
 
-* the inline code text is implemented as a button so its text can be copied
-* single line snippets take an additional tabstop to support arrow key scrolling
+- the inline code text is implemented as a button so its text can be copied
+- single line snippets take an additional tabstop to support arrow key scrolling
