fix: data table image and heading content

--- a/src/pages/components/data-table/accessibility.mdx
+++ b/src/pages/components/data-table/accessibility.mdx
@@ -8,23 +8,29 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 
 <PageDescription>
 
-Design annotations are needed for specific instances shown below, but for the standard data table component, Carbon already incorporates accessibility.
+Design annotations are needed for specific instances shown below, but for the
+standard data table component, Carbon already incorporates accessibility.
 
 </PageDescription>
 
 <AnchorLinks>
   <AnchorLink>What Carbon provides</AnchorLink>
-  <AnchorLink>Design annotations</AnchorLink>
-  <AnchorLink>Developer considerations</AnchorLink>
+  <AnchorLink>Design recommendations</AnchorLink>
+  <AnchorLink>Development considerations</AnchorLink>
 </AnchorLinks>
 
 ## What Carbon provides
 
-Carbon bakes keyboard operation into its components, improving the experience of blind users and others who operate via the keyboard. Carbon incorporates many other accessibility considerations, some of which are described below.
+Carbon bakes keyboard operation into its components, improving the experience of
+blind users and others who operate via the keyboard. Carbon incorporates many
+other accessibility considerations, some of which are described below.
 
 ### Keyboard interaction
 
-There are three data table variants with different interactions. Optional features like column sorting can appear in any of the variants. Table [pagination](https://www.carbondesignsystem.com/components/pagination/usage/) is treated as a separate component.
+There are three data table variants with different interactions. Optional
+features like column sorting can appear in any of the variants. Table
+[pagination](https://www.carbondesignsystem.com/components/pagination/usage/) is
+treated as a separate component.
 
 <Row>
 <Column colLg={8}>
@@ -34,11 +40,15 @@ There are three data table variants with different interactions. Optional featur
 </Column>
 </Row>
 
-For sortable tables, the column headers are reachable by `Tab` and sortable with `Space` or `Enter`.
+For sortable tables, the column headers are reachable by `Tab` and sortable with
+`Space` or `Enter`.
 
 ### Controls inside tables
 
-Any interactive controls in data cells are in the tab order and maintain normal keyboard operation. This also applies to expandable table rows, which operate in the same manner as [accordions](https://www.carbondesignsystem.com/components/accordions/usage/)
+Any interactive controls in data cells are in the tab order and maintain normal
+keyboard operation. This also applies to expandable table rows, which operate in
+the same manner as
+[accordions](https://www.carbondesignsystem.com/components/accordions/usage/)
 
 <Row>
 <Column colLg={8}>
@@ -48,11 +58,13 @@ Any interactive controls in data cells are in the tab order and maintain normal 
 </Column>
 </Row>
 
-Links, inputs, and other interactive controls inside tables operate by keyboard as normal.
+Links, inputs, and other interactive controls inside tables operate by keyboard
+as normal.
 
-### Labelling and updates
+### Labeling and updates
 
-If columns are sortable, the sort symbols appear on hover or focus. A sorted column retains an indicator until it is no longer sorted. 
+If columns are sortable, the sort symbols appear on hover or focus. A sorted
+column retains an indicator until it is no longer sorted.
 
 <Row>
 <Column colLg={8}>
@@ -62,11 +74,14 @@ If columns are sortable, the sort symbols appear on hover or focus. A sorted col
 </Column>
 </Row>
 
-Sort indicators appear on hover and focus. A sorted column is indicated visually.
+Sort indicators appear on hover and focus. A sorted column is indicated
+visually.
 
-## Design annotations
+## Design recommendations
 
-Since there is no persistent visual indicator that a table is sortable, designers need to annotate if a table should be implemented with sortable column headers.
+Since there is no persistent visual indicator that a table is sortable,
+designers need to annotate if a table should be implemented with sortable column
+headers.
 
 <Row>
 <Column colLg={8}>
@@ -78,9 +93,11 @@ Since there is no persistent visual indicator that a table is sortable, designer
 
 Annotate if a table is sortable.
 
-## Developer considerations
+## Development considerations
 
 Keep this in mind if you’re modifying Carbon or creating a custom component:
 
-* Column sorting indicators are matched programmatically using `aria-sort`
-* See the [ARIA authoring practices](https://www.w3.org/TR/wai-aria-practices-1.2/#table) for more considerations
+- Column sorting indicators are matched programmatically using `aria-sort`
+- See the
+  [ARIA authoring practices](https://www.w3.org/TR/wai-aria-practices-1.2/#table)
+  for more considerations
