Updated text and 2 images

--- a/src/pages/components/accordion/accessibility.mdx
+++ b/src/pages/components/accordion/accessibility.mdx
@@ -21,7 +21,7 @@ Design annotations are needed for specific instances shown below, but for the st
 
 ## What Carbon provides
 
-No annotations for keyboard interaction or labels are needed. Carbon bakes in the interaction to support users. 
+Carbon bakes keyboard operation into its components, improving the experience of blind users and others who operate via the keyboard. Carbon incorporates many other accessibility considerations, some of which are described below.
 
 ### Keyboard interactions
 
@@ -32,21 +32,21 @@ Each accordion is a tab stop. `Space` or `Enter` keys expand or collapse accordi
 
 ![example of accordion keyboard interaction](images/accordion-accessibility-1.png)
 
-<Caption>Accordions are reached by `Tab` and activated by `Space` and `Enter` keys.</Caption>
+<Caption>Accordions and interactive elements in the expanded content are in the tab order and keyboard operable.</Caption>
 
 </Column>
 </Row>
 
 ### Labeling and states
 
-The collapsed or expanded state of the accordions is [programmatically set](https://www.ibm.com/able/requirements/requirements/#4_1_2) by default, eliminating the need for any [text equivalent](https://www.ibm.com/able/toolkit/design/content/text-equivalents/) for the chevron icons.
+The collapsed or expanded state of the accordions is [programmatically set](https://www.ibm.com/able/requirements/requirements/#4_1_2) by default, eliminating the need for designers to provide [text equivalents](https://www.ibm.com/able/toolkit/design/content/text-equivalents/) for the chevron icons.
 
 <Row>
 <Column colLg={8}>
 
 ![expanded and collapsed accordions](images/accordion-accessibility-2.png)
 
-<Caption>Carbon handles the accessibility of the chevron  indicators.</Caption>
+<Caption>Carbon handles the accessibility of the chevron indicators.</Caption>
 
 </Column>
 </Row>
