--- a/src/pages/components/checkbox/accessibility.mdx
+++ b/src/pages/components/checkbox/accessibility.mdx
@@ -31,7 +31,7 @@ Each checkbox can be reached by `Tab` and selected with `Space` independently.
 
 ![example of checkbox keyboard interaction](images/checkbox-accessibility-1.png)
 
-<Captions>Carbon checkboxes retain expected interactions.</Caption>
+<Caption>Carbon checkboxes retain expected interactions.</Caption>
 
 </Column>
 </Row>
@@ -45,7 +45,7 @@ For groups of checkboxes, Carbon already provides the code for screen readers to
 
 ![checkbox items with group label](images/checkbox-accessibility-2.png)
 
-<Captions>Carbon handles the accessibility of grouped checkboxes.</Captions>
+<Caption>Carbon handles the accessibility of grouped checkboxes.</Caption>
 
 </Column>
 </Row>
@@ -63,7 +63,7 @@ Checkboxes can appear in multiple columns. If there is a meaningful order to the
 
 ![checkboxes with instruction to ‘navigate in columns'](images/checkbox-accessibility-3.png)
 
-<Captions>Annotate if there is meaningful navigation order in rows of checkboxes.</Captions>
+<Caption>Annotate if there is meaningful navigation order in rows of checkboxes.</Caption>
 
 </Column>
 </Row>
