--- a/src/pages/components/checkbox/accessibility.mdx
+++ b/src/pages/components/checkbox/accessibility.mdx
@@ -24,7 +24,7 @@ Carbon bakes keyboard operation into its components, improving the experience of
 
 ### Keyboard interactions
 
-Each checkbox can be reached by `Tab` and selected with `Space` independently.
+Each checkbox can be reached by `Tab` and selected with `Space` independently. This matches the established HTML interaction pattern.
 
 <Row>
 <Column colLg={8}>
