--- a/src/pages/components/slider/accessibility.mdx
+++ b/src/pages/components/slider/accessibility.mdx
@@ -6,8 +6,8 @@ description:
 tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 ---
 
-import localVideo from '../videos/slider.mp4';
-import localPoster from '../images/slider-accessibility-3.png';
+// import localVideo from '../videos/slider.mp4';
+// import localPoster from '../images/slider-accessibility-3.png';
 
 <PageDescription>
 
