--- a/src/pages/components/tabs/style.mdx
+++ b/src/pages/components/tabs/style.mdx
@@ -43,7 +43,7 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 | Disabled | Label           | text-color       | `$text-disabled`  |
 |          | Icon            | svg              | `$icon-disabled`  |
 |          | Tab             | background-color | transparent       |
-|          |                 | border-bottom    | `$border-disable` |
+|          |                 | border-bottom    | `$border-disabled` |
 
 <div className="image--fixed">
 
