Lauren's review updates

--- a/src/pages/components/tabs/style.mdx
+++ b/src/pages/components/tabs/style.mdx
@@ -56,7 +56,11 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
   tabs.
 </Caption>
 
+<br />
+
 #### Scrollable states
+
+<br />
 
 | State   | Element | Property         | Color token                            |
 | ------- | ------- | ---------------- | -------------------------------------- |
@@ -64,7 +68,7 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 |         | Button  | linear-gradient  | `$background` to 100% transparent, 8px |
 |         |         | background-color | `$background`                          |
 | Hover   | Button  | background-color | `$background-hover`                    |
-| Active  | Button  | background-color | `$layer-accent`                        |
+| Active  | Button  | background-color | `$background-active`                        |
 | Focus   | Button  | border           | `$focus`                               |
 
 <div className="image--fixed">
@@ -137,7 +141,11 @@ tabs.](images/tab-style-5.png)
   Hover, focus-enabled, focus-selected, and disabled states for contained tabs.
 </Caption>
 
+<br />
+
 #### Scrollable states
+
+<br />
 
 | State   | Element | Property         | Color token               |
 | ------- | ------- | ---------------- | ------------------------- |
