update tab captions

--- a/src/pages/components/tabs/style.mdx
+++ b/src/pages/components/tabs/style.mdx
@@ -21,11 +21,11 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 
 <div className="image--fixed">
 
-![Example of selected and enabled line tabs](images/tab-style-1.png)
+![Example of selected and unselected line tabs](images/tab-style-1.png)
 
 </div>
 
-<Caption>Example of selected and enabled line tabs.</Caption>
+<Caption>Example of selected and unselected line tabs.</Caption>
 
 <br />
 
@@ -47,12 +47,12 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 
 <div className="image--fixed">
 
-![Examples of hover, focus-enabled, focus-selected, and disabled states](images/tab-style-3.png)
+![Examples of hover, focus-unselected, focus-selected, and disabled states](images/tab-style-3.png)
 
 </div>
 
 <Caption>
-  Examples of hover, focus-enabled, focus-selected, and disabled states for line
+  Examples of hover, focus-unselected, focus-selected, and disabled states for line
   tabs.
 </Caption>
 
@@ -102,11 +102,11 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 
 <div className="image--fixed">
 
-![Examples of selected and enabled contained tabs](images/tab-style-2.png)
+![Examples of selected and unselected contained tabs](images/tab-style-2.png)
 
 </div>
 
-<Caption>Examples of selected and enabled contained tabs.</Caption>
+<Caption>Examples of selected and unselected contained tabs.</Caption>
 
 <br />
 
