--- a/src/pages/components/progress-bar/usage.mdx
+++ b/src/pages/components/progress-bar/usage.mdx
@@ -71,7 +71,7 @@ how long a process will take, or if a request is being executed.
   percentage
 - To visually show the progression of a system operation such as downloading,
   uploading, loading data, submitting a form, or saving updates
-- To convey that data is being requested, transferred or processed
+- To convey that data is being requested, transferred, or processed
 
 #### When not to use
 
