--- a/src/pages/components/progress-bar/usage.mdx
+++ b/src/pages/components/progress-bar/usage.mdx
@@ -368,7 +368,7 @@ dismissed depending on what is most suitable for the use case.
 
 The active loading state indicates that the action is still in progress.
 
-#### Successful
+#### Success
 
 The success loading state indicates that the action completed successfully.
 
