--- a/src/pages/components/progress-bar/usage.mdx
+++ b/src/pages/components/progress-bar/usage.mdx
@@ -96,7 +96,7 @@ which a bar is moving along in constant speed, repeating over time.
 | Variant                        | Purpose                                                                                                                                                                                                                                                    |
 | ------------------------------ | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | --- |
 | [Determinate](Determinate)     | Use determinate progress bars for a specified amount of time for clear information about the progression — they convey exact and qualitative information about the progression.                                                                             |     |
-| [Indeterminate](Indeterminate) | Use indeterminate progress bars for an unspecified completion of time or unclear information about the progression — they convey that users’ request, action, or data is being processed at the moment without indicating how long the activity will take. |
+| [Indeterminate](/components/progress-bar/usage#indeterminate-progress-bar) | Use indeterminate progress bars for an unspecified completion of time or unclear information about the progression — they convey that users’ request, action, or data is being processed at the moment without indicating how long the activity will take. |
 
 <Row>
 <Column colLg='4'>
