chore: sync v11 with main branch (#2748)
* status indicator pattern

* Update index.mdx

Full copy edit and revision.

* copy edits, finalizing names for indicators

* chore: temporarily remove status indicator from sidenav

* docs(support-02): update support-02 value (#2288)

* add button variants to live modal preivew (#2299)

* docs(Modal): update modal live preview

* docs(Modal): add solo button example to code docs

* docs(Modal): update action handler

Co-authored-by: Josefina Mancilla <32556167+jnm2377@users.noreply.github.com>
Co-authored-by: TJ Egan <tw15egan@gmail.com>
Co-authored-by: Andrea N. Cardona <andreancardona@gmail.com>

* chore(gatsby): remove v3.0 FAST_REFRESH flag (#2336)

Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

* comms: All about Carbon additions, edits, deletions (#2338)

* comms: all about carbon additions

* update to the team page

* copyediting pass

* Update src/pages/all-about-carbon/who-uses-carbon.mdx

Co-authored-by: emyarod <emyarod@users.noreply.github.com>

* Update src/pages/all-about-carbon/who-uses-carbon.mdx

Co-authored-by: emyarod <emyarod@users.noreply.github.com>

* Update src/pages/all-about-carbon/who-uses-carbon.mdx

Co-authored-by: emyarod <emyarod@users.noreply.github.com>

* Update src/pages/all-about-carbon/who-uses-carbon.mdx

Co-authored-by: emyarod <emyarod@users.noreply.github.com>

* Update src/pages/all-about-carbon/who-uses-carbon.mdx

Co-authored-by: emyarod <emyarod@users.noreply.github.com>

* Delete why-use-carbon copy.mdx

Co-authored-by: emyarod <emyarod@users.noreply.github.com>

* copy edits to who uses carbon (#2347)

* fix: update Carbon for IBM.com community index links (#2343)

Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

* Removed space between paragraphs (#2351)

Removed space between paragraphs in “Overview” and “Carbon is open source” so the copy reads continuously without paragraph breaks. Not needed and disrupting 

--- a/src/pages/developing/react-tutorial/step-1.mdx
+++ b/src/pages/developing/react-tutorial/step-1.mdx
@@ -70,13 +70,15 @@ cd carbon-tutorial
 ### Add upstream remote
 
 Add a remote called `upstream` so we can eventually submit a pull request once
-you have completed this tutorial step.
+you have completed this tutorial step. There are two choices: SSH or HTTPS
+
+#### SSH
 
 ```bash
 git remote add upstream git@github.com:carbon-design-system/carbon-tutorial.git
 ```
 
-Or, if you prefer to use HTTPS instead of SSH with your remotes:
+#### HTTPS
 
 ```bash
 git remote add upstream https://github.com/carbon-design-system/carbon-tutorial.git
