--- a/src/pages/designing/design-resources/index.mdx
+++ b/src/pages/designing/design-resources/index.mdx
@@ -283,20 +283,37 @@ handoff assets to make sure your designs are accessible for implementation.
 
 ## Prototyping tools
 
+### Carbon Mid-Fi Sketch kit
+
+This kit provides designers with a way to visualize concepts and test them out
+before committing to high-fidelity designs.
+
+<Row className="resource-card-group">
+  <Column colMd={4} colLg={4} noGutterSm>
+    <ResourceCard
+      subTitle="Carbon Mid-Fi Sketch kit"
+      href="sketch://add-library/cloud/e888aa99-4d88-46a4-9b33-3a033e7f5ca2"
+      actionIcon="download"
+    >
+      <MdxIcon name="sketch" />
+    </ResourceCard>
+  </Column>
+</Row>
+
 ### Invision Freehand kit
 
 A Carbon wireframe kit for Invision Freehand is available for teams to create
 low fidelity wireframes. This kit is maintained by the Cloud PAL community.
 
-#### How to access the kit:
+<Row className="resource-card-group">
+<Column colMd={4} colLg={4} noGutterSm>
+  <ResourceCard
+    subTitle="Invision Freehand kit"
+    href="https://pages.github.ibm.com/cdai-design/cloud-pal/resources/resources/#invision-freehand-kit"
+    actionIcon="launch">
 
-1. Log into [Invision Freehand](https://ibm.invisionapp.com/freehand/) and
-   create a new freehand.
-2. Next, select `Wireframes and flowcharts` from the template window.
-3. Select `Wireframe - carbon components` by Kamil Zal.
+![Invision icon](/images/invision.png)
 
-For more instructions go to
-[IBM Cloud PAL](https://pages.github.ibm.com/ibmcloud/pal/resources/resources/#invision-freehand-kit)
-_IBMers only_.
-
-<br />
+  </ResourceCard>
+</Column>
+</Row>
